--- a/src/resources/views/details_product.hbs
+++ b/src/resources/views/details_product.hbs
@@ -16,7 +16,7 @@
       <span class="category-text">CATEGORIES</span>
     </label>
   </div>
-  <div class="container details" data-product-id="1">
+  <div class="container details" data-product-id={{product._id}}>
     <div class="left-column">
       <img src="data:{{product.contentType}};base64,{{product.imageBase64}}" alt="Hình ảnh lớn" class="idProduct">
     </div>
