--- a/src/resources/views/details_product.hbs
+++ b/src/resources/views/details_product.hbs
@@ -5,7 +5,7 @@
     <input type="checkbox" id="check1" name="check1">
     <nav class="container nav1">
       <ul>
-        <li><a href="customer_page.html">Home</a></li>
+        <li><a href="/l">Home</a></li>
         <li><a href="#">Product</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Contact Us</a></li>
