--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -3,7 +3,7 @@
     <input type="checkbox" id="check1" name="check1">
     <nav class="container nav1">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#">Product</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -25,13 +25,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/slide1.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slide1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="image/slider2.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slider2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="image/slider3.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slider3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -44,10 +44,10 @@
     </button>
   </div>
   <div class="carousel-item">
-    <img src="image/slider2.jpg" class="d-block w-100" alt="...">
+    <img src="/image/slider2.jpg" class="d-block w-100" alt="...">
   </div>
   <div class="carousel-item">
-    <img src="image/slider3.jpg" class="d-block w-100" alt="...">
+    <img src="/image/slider3.jpg" class="d-block w-100" alt="...">
   </div>
   </div>
   </div>
@@ -69,7 +69,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection1.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection1.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Health & Personal Care
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection2.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection2.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Beauty picks
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection3.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Electronics
@@ -106,7 +106,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection4.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection4.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Fashionista
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection5.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection5.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Sports and Outdoors
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection6.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection6.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Groceries
@@ -171,7 +171,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <a href="#"><img src="image/trendingCategory1.jpg" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="/image/trendingCategory1.jpg" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <a href="#">
                           Cell Phones & Accessories
@@ -181,7 +181,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory2.png" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory2.png" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Computers and laptops
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory3.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Shoes and fashion accessories
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory4.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory4.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Children's toys and supplies
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory10.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory10.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Health and beauty
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory9.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory9.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Men's and women's fashion
@@ -235,7 +235,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <a href="#"><img src="image/trendingCategory5.jpg" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="/image/trendingCategory5.jpg" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <a href="#">
                           Sports and picnics
@@ -245,7 +245,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory6.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory6.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Food and fresh food
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory7.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory7.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Accessories for cars
@@ -265,7 +265,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory8.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory8.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Office supplies
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory11.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory11.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Household electronic appliances
@@ -285,7 +285,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory12.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory12.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Medical and healthcare equipment
@@ -330,7 +330,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <img src="image/flashsale1.jpg" class="card-img-top" alt="...">
+                      <img src="/image/flashsale1.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">
                           StorageWorks Large Storage Baskets for Organizing</h5>
@@ -340,7 +340,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale2.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Bedsure Fleece Blanket Twin Blanket</h5>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale3.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Zulay Measuring Spoons Set - 6 Piece </h5>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale4.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Coffee Pod Holder, Large Capacity K Cup</h5>
@@ -370,7 +370,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale9.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale9.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Nulksen Tire Inflator Portable Air</h5>
@@ -380,7 +380,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale10.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale10.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         iRobot Roomba j7+</h5>
@@ -394,7 +394,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <img src="image/flashsale5.jpg" class="card-img-top" alt="...">
+                      <img src="/image/flashsale5.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">
                           Pipishell Bamboo Expandable Drawer Organizer </h5>
@@ -405,7 +405,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale6.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         ComfiLife Anti Fatigue Floor Mat – 3/4 Inch</h5>
@@ -415,7 +415,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale7.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale7.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Bloomingville Handwoven 28" Round Rattan</h5>
                       <p class="card-text">Price: $19.99</p>
@@ -424,7 +424,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale8.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale8.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Zulay Kitchen 6 Piece Wooden Spoons for Cooking</h5>
                       <p class="card-text">Price: $25.49</p>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale11.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale11.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Ekouaer Women's Swimsuit Beach</h5>
                       <p class="card-text">Price: $24.49</p>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4 ">
                   <div class="card">
-                    <img src="image/flashsale12.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale12.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Bedsure Fleece Blankets Twin</h5>
                       <p class="card-text">Price: $15.99</p>
@@ -476,37 +476,37 @@
     <div class="simple-mall">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall1.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall1.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo1.jpg" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo1.jpg" alt="Brand Logo 1">
           <h5 class="brand-name">ASUS </h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall2.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall2.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo2.png" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo2.png" alt="Brand Logo 1">
           <h5 class="brand-name">Adidas</h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall3.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall3.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo3.png" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo3.png" alt="Brand Logo 1">
           <h5 class="brand-name">Maybelline</h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall4.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall4.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo4.jpg" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo4.jpg" alt="Brand Logo 1">
           <h5 class="brand-name">Nestle</h5>
         </div>
       </div>
@@ -519,9 +519,9 @@
     <div class="daily">
       <h2 class=" mb-2">Daily Discover</h2>
     </div>
-    <div class="daily-discover row">
+    <div class="daily-discover row" id="search-results">
       {{#each products}}
-      {{#ifCond @index "%" 6}}
+      {{#ifCond @index "%" 7}}
     </div>
     <div class="row">
       {{/ifCond}}
@@ -542,4 +542,25 @@
     </div>
 
   </div>
+  <script>
+    function submitSearch(event) {
+      event.preventDefault(); // Ngăn chặn hành vi mặc định của form submission
+
+      const form = event.target; // Lấy form hiện tại
+      const formData = new FormData(form); // Tạo đối tượng FormData để lấy giá trị của form
+
+      fetch('/products/search', {
+        method: 'POST',
+        body: formData
+      })
+        .then(response => response.text())
+        .then(data => {
+          // Cập nhật lại nội dung div search-results với kết quả tìm kiếm
+          const container = document.getElementById('search-results');
+          container.innerHTML = data;
+        })
+        .catch(error => console.error(error));
+    }
+  </script>
+
 </main>
