--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   {{!-- <title>Document</title> --}}
-    <script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
 
 </head>
 
@@ -24,32 +24,33 @@
     <input type="checkbox" id="check" name="check">
     <nav class="container">
       <ul class="left">
-        <li><a href="#">Become our vendor</a></li>
-        <li><a href="#">Become our customers</a></li>
-        <li><a href="#">Become our delivery boys</a></li>
+        <li><a href="/vendor/register">Become our vendor</a></li>
+        <li><a href="/customer/register">Become our customers</a></li>
+        <li><a href="/shipper/register">Become our delivery boys</a></li>
       </ul>
       <ul class="right">
         <li><a href="#">Log in</a></li>
-        <li><a href="#">Sign in</a></li>
+        <li><a href="/customer/register">Sign up</a></li>
       </ul>
     </nav>
     <label for="check" class="checkbtn"><i class="fa fa-bars"></i></label>
 
     <div class="subnav container mb-0">
       <div class="logo">
-        <a href="#">
+        <a href="/">
           <b>SIMPLE</b>
         </a>
       </div>
       <div class="nav-right">
         <div class="search">
-          <form>
-            <input type="text" placeholder="search something here">
+          <form method="GET" action="/products/v1/search">
+            <input type="text" id="search" name="query" placeholder="search something here">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
+          
         </div>
         <div class="icons">
-          <a href="#"><i class="fa fa-shopping-cart"></i></a>
+          <a href="/products/orders"><i class="fa fa-shopping-cart"></i></a>
           <a href="#"><i class="fa fa-user"></i></a>
         </div>
         <a href="#" class="menu-toggle"><i class="fa fa-bars"></i></a>
