--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -29,7 +29,7 @@
         <li><a href="/shipper/register">Become our delivery boys</a></li>
       </ul>
       <ul class="right">
-        <li><a href="#">Log in</a></li>
+        <li><a href="/login">Log in</a></li>
         <li><a href="/customer/register">Sign up</a></li>
       </ul>
     </nav>
@@ -51,7 +51,7 @@
         </div>
         <div class="icons">
           <a href="/products/orders"><i class="fa fa-shopping-cart"></i></a>
-          <a href="#"><i class="fa fa-user"></i></a>
+          <a href="/info"><i class="fa fa-user"></i></a>
         </div>
         <a href="#" class="menu-toggle"><i class="fa fa-bars"></i></a>
       </div>
