--- a/src/resources/views/customer_info.hbs
+++ b/src/resources/views/customer_info.hbs
@@ -11,21 +11,18 @@
           
           <div class="col">
             <div class="justify-content-center d-flex">
-              <img id="preview-image" src="data:{{shipper.contentType}};base64,{{shipper.imageBase64}}" alt="Preview Image" style="max-width: 50%; height: auto;">
+              <img id="preview-image" src="image/no-image.png" alt="Preview Image" style="max-width: 50%; height: auto;">
             </div>
             <h3 class="text-center">Your image</h3>
-            <form method="POST" action="/shipper/change_profile" enctype="multipart/form-data">
+            <form>
               <div class="form-group m-2">
                 <input type="file" class="form-control" id="input-image" name="profilePicture" placeholder="avatar">
               </div>
-              
               <div class="form-group m-2">
-                <select class="form-control" id="input-hub" name="hub">
-                  <option value="">Select Hub</option>
-                   {{#each data}}
-                <option value="{{this._id}}">{{this.name}}</option>
-                {{/each}}
-                </select>
+                <input type="text" class="form-control" id="input-user" placeholder="Name" required>
+              </div>
+              <div class="form-group m-2">
+                <input type="text" class="form-control" id="input-address" placeholder="Address">
               </div>
               
               <div class="d-flex justify-content-center align-items-center">
@@ -33,12 +30,9 @@
               </div>
 
             </form>
-            <form action="shipper/logout" method="POST">
             <div class="d-flex justify-content-center align-items-center mt-2">
-
               <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Log out</button>
             </div>
-            </form>
           </div>
         </div>
       </div>
