--- a/src/resources/views/vendor_info.hbs
+++ b/src/resources/views/vendor_info.hbs
@@ -1,4 +1,4 @@
-<h1>Vendor Information</h1>
+{{!-- <h1>Vendor Information</h1>
 
   <li>Username: {{vendor.username}}</li>
   <li>name: {{vendor.name}}</li>
@@ -26,4 +26,84 @@
     />
     <button type="submit">Change Profile Picture</button>
   </form>
-</ul>
+</ul> --}}
+
+
+ <main>
+    <div class="container-fluid" style="padding: 0;">
+      <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #034266;">
+        <div class="text-white text-center display-1">My page</div>
+      </div>
+    </div>
+
+    <div class="container" style="display: block;">
+      <div class="white-div d-flex align-items-center justify-content-center">
+        <div class="row">
+          
+          <div class="col">
+            <div class="justify-content-center d-flex">
+              <img id="preview-image" src="data:{{vendor.contentType}};base64,{{vendor.imageBase64}}" alt="Preview Image" style="max-width: 50%; height: auto;">
+            </div>
+            <h3 class="text-center">Your image</h3>
+            <form method="POST" action="/vendor/change_profile" enctype="multipart/form-data">
+              <div class="form-group m-2">
+                <input type="file" class="form-control" id="input-image" name="profilePicture" placeholder="avatar">
+              </div>
+              <div class="form-group m-2">
+                <input type="text" class="form-control" id="input-buisiness" placeholder="Buisiness name" name="business_name" value={{vendor.business_name}}>
+              </div>
+              <div class="form-group m-2">
+                <input type="text" class="form-control" id="input-address" placeholder="Buisiness address" name="business_address"  value={{vendor.business_address}}>
+              </div>
+              
+              <div class="d-flex justify-content-center align-items-center">
+                <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Change information</button>
+              </div>
+
+            </form>
+
+            <form action="vendor/logout" method="POST">
+            <div class="d-flex justify-content-center align-items-center mt-2">
+
+              <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Log out</button>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      const imageInput = document.getElementById("input-image");
+      const imagePreview = document.getElementById("preview-image");
+    
+      imageInput.addEventListener("change", function(event) {
+        const file = event.target.files[0];
+    
+        if (file) {
+          const reader = new FileReader();
+    
+          reader.onload = function(e) {
+            imagePreview.src = e.target.result;
+          };
+    
+          reader.readAsDataURL(file);
+        } else {
+          imagePreview.src = "#";
+        }
+      });
+      
+</script>
+    </script>
+    <style>
+      .white-div {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
+    </style>
+
+
+
+  </main>
