--- a/src/resources/views/list_product.hbs
+++ b/src/resources/views/list_product.hbs
@@ -1,9 +1,127 @@
-<p>
+{{!-- <p>
   {{message}}
 </p>
 <ul>
   {{#each products}}
-    <li><a href="/products/{{this._id}}">{{this.name}}</a></li>
-    
+  <li><a href="/products/{{this._id}}">{{this.name}}</a></li>
+
   {{/each}}
-</ul>
+</ul> --}}
+
+<main>
+
+  <div class="container-fluid" style="padding: 0;">
+    <div class="d-flex justify-content-between align-items-center"
+      style="height: 15vh; background-color: #F6460E; text-align: left;">
+      <div class="text-white text-center display-1" style="margin-left: 20px;">Products</div>
+      <div style="margin-right: 20px;">
+        <a href="/vendor/create_product"><button type="button" class="btn"
+            style="background-color: #034266; color: white;">Add new products</button></a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- <div style="background-color: #8D8C8C;">
+      <input type="checkbox" id="check1" name="check1">
+      <nav class="container nav1">
+          <ul>
+              <li style="background-color: #DE4F11;"><a href="#">Order</a></li>
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Service</a></li>
+              <li><a href="#">Contact Us</a></li>
+          </ul>
+      </nav>
+      <label for="check1" class="checkbtn1">
+          <i class="fa fa-bars"></i>
+          <span class="category-text">CATEGORIES</span>
+      </label>
+  </div> -->
+
+  <div class="container-fluid" style="margin-top: 50px; display:block; padding: 0;">
+    <div class="white-div align-items-center" style="padding: 0;">
+      <div class="row">
+
+        <div class="col">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Price</th>
+                {{!-- <th>Quantity</th> --}}
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{#each products}}
+              <tr>
+                <td>{{@index}}</td>
+                <td><img src="data:{{this.contentType}};base64,{{this.imageBase64}}" width="10%" height="10%" alt="">
+                </td>
+                <td class="d-none">
+                  <input class="product-id" value="{{this._id}}" type="hidden">
+                </td>
+                <td>{{this.name}}</td>
+                <td>{{this.price}}$</td>
+                {{!-- <td>10</td> --}}
+                <td>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="actionDropdown"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Actions
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="actionDropdown">
+                      <li><a href="/vendor/editProduct/{{this._id}}"><button
+                            class="dropdown-item accept-btn">Edit</button></a></li>
+                      <li><button class="dropdown-item decline-btn" onclick="deleteProduct(this)">Delete</button></li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              {{/each}}
+              <!-- Add more rows as needed -->
+            </tbody>
+          </table>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <script>
+
+    function deleteItem(button) {
+      var id = button.closest(".dropdown-menu").querySelector(".product-id").value;
+      fetch("/vendor/deleteProduct", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ id: id })
+      })
+        .then(response => {
+          if (response.ok) {
+            alert("Sản phẩm đã được xóa thành công!");
+          } else {
+            alert("Đã xảy ra lỗi khi xóa sản phẩm!");
+          }
+        })
+        .catch(error => {
+          alert("Đã xảy ra lỗi khi gọi API xóa sản phẩm:", error);
+        });
+    }
+  </script>
+  <style>
+    .white-div {
+      background-color: white;
+      padding: 20px;
+      border-radius: 5px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+  </style>
+
+
+
+</main>
