--- a/src/resources/views/add_product.hbs
+++ b/src/resources/views/add_product.hbs
@@ -57,7 +57,7 @@
             </div>
             <div class="form-group m-2">
               <h3>Product description</h3>
-              <textarea type="text" class="form-control" name="" id="" cols="30" rows="5" name="description"
+              <textarea type="text" class="form-control" id="" cols="30" rows="5" name="description"
                 required></textarea>
             </div>
 
