--- a/src/resources/views/details_product.hbs
+++ b/src/resources/views/details_product.hbs
@@ -1,11 +1,9 @@
-
-
 <main>
   <div style="background-color: #8D8C8C;">
     <input type="checkbox" id="check1" name="check1">
     <nav class="container nav1">
       <ul>
-        <li><a href="/l">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#">Product</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -42,6 +40,9 @@
         <button class="add-button">+</button>
       </div>
       <button class="add-to-cart-button">Thêm vào giỏ hàng</button>
+      <br>
+      <strong>Description: </strong>
+      <div>{{product.description}}</div>
     </div>
   </div>
   <script>
