--- a/src/resources/views/edit_product.hbs
+++ b/src/resources/views/edit_product.hbs
@@ -12,31 +12,31 @@
                 <div class="col">
                     <h3>Product image</h3>
                     <div class="">
-                        <img id="preview-image"  src="data:{{data.contentType}};base64,{{data.imageBase64}}" alt="Preview Image"
-                            style="max-width: 50%; height: auto;">
+                        <img id="preview-image" src="data:{{data.contentType}};base64,{{data.imageBase64}}"
+                            alt="Preview Image" style="max-width: 50%; height: auto;">
                     </div>
-                    <form>
+                    <form method="POST" enctype="multipart/form-data">
                         <div class="form-group m-2">
                             <input type="file" class="form-control" id="input-image" name="profilePicture"
                                 placeholder="avatar">
                         </div>
                         <div class="form-group m-2">
                             <h3>Product Name</h3>
-                            <input type="text" class="form-control" id="input-name" name="product-name" name="name" value="{{data.name}}" placeholder=""
-                                required>
+                            <input type="text" class="form-control" id="input-name"  name="name"
+                                value="{{data.name}}" placeholder="" required>
                         </div>
                         <div class="form-group m-2">
                             <h3>Product description</h3>
-                            <textarea type="text" class="form-control" name="" id="" cols="30" rows="5" value="{{data.description}}"
-                                required></textarea>
+                            <textarea type="text" class="form-control" name="" id="" cols="30" rows="5"
+                                value="{{data.description}}" name="description" required></textarea>
                         </div>
 
                         <div class="row m-0">
                             <div class="col-md-6 mb-4">
-                                <input type="text" class="form-control" id="input-name" name="product-name" value="{{data.price}}"
-                                    placeholder="price" required>
+                                <input type="text" class="form-control" id="input-name" name="price"
+                                    value="{{data.price}}" placeholder="price" required>
                             </div>
-                            
+
                         </div>
 
 
