--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -519,27 +519,25 @@
     <div class="daily">
       <h2 class=" mb-2">Daily Discover</h2>
     </div>
-    <div class="daily-discover row" id="search-results">
-      {{#each products}}
-      {{#ifCond @index "%" 7}}
-    </div>
-    <div class="row">
-      {{/ifCond}}
-
-      <div class="col-lg-2">
-        <div class="card">
+ <div class="daily-discover row">
+  {{#each products}}
+    <div class="col-lg-2 mt-4">
+      <div class="card">
           <img src="data:{{this.contentType}};base64,{{this.imageBase64}}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="/products/{{this._id}}">
+        <div class="card-body">
               <h5 class="card-title">{{this.name}}</h5>
-            </a>
             <p class="card-text">${{this.price}}</p>
-          </div>
         </div>
       </div>
-      {{/each}}
-
     </div>
+    {{#ifCond @index "%" 6}}
+</div>
+<div class="daily-discover row">
+    {{/ifCond}}
+  {{/each}}
+</div>
+
+
 
   </div>
   <script>
