--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -35,7 +35,7 @@
               style="background-color: white; padding: 10px; position: absolute; top: 76px; left: 50%; transform: translateX(-50%);">
               New To Simple?
             </div>
-            <a href=""><button type="submit" class="btn"
+            <a href="/customer/register"><button type="submit" class="btn"
                 style="width: 100%; background-color: #DE4F11; color: white; font-size: x-large; margin-top: 5vw;"><b>Sign
                   up</b></button></a>
           </div>
