sua loi update infor

--- a/src/resources/views/customer_info.hbs
+++ b/src/resources/views/customer_info.hbs
@@ -21,11 +21,11 @@
             </div>
             <div class="form-group m-2">
               <input type="text" class="form-control" id="input-user" placeholder="Name" name="name"
-                value={{customer.name}} required>
+                value="{{customer.name}}" required>
             </div>
             <div class="form-group m-2">
               <input type="text" class="form-control" id="input-address" placeholder="Address" name="address"
-                value={{customer.address}}>
+                value="{{customer.address}}">
             </div>
 
             <div class="d-flex justify-content-center align-items-center">
