--- a/src/resources/views/vendor_info.hbs
+++ b/src/resources/views/vendor_info.hbs
@@ -50,10 +50,10 @@
                 <input type="file" class="form-control" id="input-image" name="profilePicture" placeholder="avatar">
               </div>
               <div class="form-group m-2">
-                <input type="text" class="form-control" id="input-buisiness" placeholder="Buisiness name" name="business_name" value={{vendor.business_name}}>
+                <input type="text" class="form-control" id="input-buisiness" placeholder="Buisiness name" name="business_name" value="{{vendor.business_name}}">
               </div>
               <div class="form-group m-2">
-                <input type="text" class="form-control" id="input-address" placeholder="Buisiness address" name="business_address"  value={{vendor.business_address}}>
+                <input type="text" class="form-control" id="input-address" placeholder="Buisiness address" name="business_address"  value="{{vendor.business_address}}">
               </div>
               
               <div class="d-flex justify-content-center align-items-center">
