--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -3,10 +3,10 @@
         <input type="checkbox" id="check1" name="check1">
         <nav class="container nav1">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">Product</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/service">Service</a></li>
+                <li><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
         <label for="check1" class="checkbtn1">
