--- a/src/resources/views/checkout.hbs
+++ b/src/resources/views/checkout.hbs
@@ -4,8 +4,8 @@
         <nav class="container nav1">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="/product">Product</a></li>
+        <li><a href="/service">Service</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
