--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -4,9 +4,9 @@
     <nav class="container nav1">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="#">Product</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/product">Product</a></li>
+        <li><a href="/service">Service</a></li>
+        <li><a href="/contact">Contact Us</a></li>
       </ul>
     </nav>
     <label for="check1" class="checkbtn1">
