--- a/src/resources/views/home_service.hbs
+++ b/src/resources/views/home_service.hbs
@@ -3,10 +3,12 @@
     <input type="checkbox" id="check1" name="check1" />
     <nav class="container nav1">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Product</a></li>
-        <li style="background-color: #DE4F11;"><a href="/service">Service</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/product">Product</a></li>
+        <li style="background-color: #DE4F11;"><a
+            href="/service"
+          >Service</a></li>
+        <li><a href="/contact">Contact Us</a></li>
       </ul>
     </nav>
     <label for="check1" class="checkbtn1">
