--- a/src/resources/views/shipper_info.hbs
+++ b/src/resources/views/shipper_info.hbs
@@ -19,14 +19,19 @@
                 <input type="file" class="form-control" id="input-image" name="profilePicture" placeholder="avatar">
               </div>
               
-              <div class="form-group m-2">
-                <select class="form-control" id="input-hub" name="hub">
-                  <option value="">Select Hub</option>
-                   {{#each data}}
-                <option value="{{this._id}}">{{this.name}}</option>
-                {{/each}}
-                </select>
-              </div>
+          <div class="form-group m-2">
+ <select class="form-control" id="input-hub" name="hub">
+  <option value="">Select Hub</option>
+  {{#each data}}
+    {{#if (isEqualObjectId this._id ../shipper.distributionHub)}}
+      <option value="{{this._id}}" selected>{{this.name}}</option>
+    {{else}}
+      <option value="{{this._id}}">{{this.name}}</option>
+    {{/if}}
+  {{/each}}
+</select>
+
+</div>
               
               <div class="d-flex justify-content-center align-items-center">
                 <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Change information</button>
