--- a/src/resources/views/Product.hbs
+++ b/src/resources/views/Product.hbs
@@ -34,8 +34,10 @@
       <div class="card">
           <img src="data:{{this.contentType}};base64,{{this.imageBase64}}" class="card-img-top" alt="...">
         <div class="card-body">
+<a href ="/products/{{this._id}}">
               <h5 class="card-title">{{this.name}}</h5>
-            <p class="card-text">${{this.price}}</p>
+          </a>
+                        <p class="card-text">${{this.price}}</p>
         </div>
       </div>
     </div>
