--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -46,7 +46,7 @@
 
 
         </div> --}}
-   <div class="daily-discover row">
+   <div class="daily-discover row"  style="width: 100%;">
   {{#each products}}
     <div class="col-lg-2 mt-4">
       <div class="card">
