--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -25,13 +25,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/slide1.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slide1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="image/slider2.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slider2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="image/slider3.jpg" class="d-block w-100" alt="...">
+        <img src="/image/slider3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -44,14 +44,15 @@
     </button>
   </div>
   <div class="carousel-item">
-    <img src="image/slider2.jpg" class="d-block w-100" alt="...">
+    <img src="/image/slider2.jpg" class="d-block w-100" alt="...">
   </div>
   <div class="carousel-item">
-    <img src="image/slider3.jpg" class="d-block w-100" alt="...">
+    <img src="/image/slider3.jpg" class="d-block w-100" alt="...">
   </div>
   </div>
   </div>
 
+  <!-- collection -->
   <!-- collection -->
   <div class="container collections">
     <div class="row justify-content-center">
@@ -69,7 +70,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection1.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection1.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Health & Personal Care
@@ -80,7 +81,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection2.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection2.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Beauty picks
@@ -91,7 +92,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection3.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Electronics
@@ -102,14 +103,14 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item ">
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection4.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection4.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
-                        Fashionista
+                        Home Decor
                       </a>
                     </div>
                     <a class="discovernow" href="#">Discover Now</a>
@@ -117,10 +118,10 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection5.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection5.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
-                        Sports and Outdoors
+                        Sports & Fitness
                       </a>
                     </div>
                     <a class="discovernow" href="#">Discover Now</a>
@@ -128,10 +129,10 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/collection6.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/collection6.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
-                        Groceries
+                        Clothing
                       </a>
                     </div>
                     <a class="discovernow" href="#">Discover Now</a>
@@ -139,6 +140,7 @@
                 </div>
               </div>
             </div>
+
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#collection" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -171,7 +173,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <a href="#"><img src="image/trendingCategory1.jpg" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="/image/trendingCategory1.jpg" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <a href="#">
                           Cell Phones & Accessories
@@ -181,7 +183,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory2.png" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory2.png" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Computers and laptops
@@ -191,7 +193,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory3.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Shoes and fashion accessories
@@ -201,7 +203,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory4.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory4.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Children's toys and supplies
@@ -211,7 +213,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory10.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory10.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Health and beauty
@@ -221,7 +223,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory9.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory9.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Men's and women's fashion
@@ -235,7 +237,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <a href="#"><img src="image/trendingCategory5.jpg" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="/image/trendingCategory5.jpg" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <a href="#">
                           Sports and picnics
@@ -245,7 +247,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory6.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory6.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Food and fresh food
@@ -255,7 +257,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory7.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory7.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Accessories for cars
@@ -265,7 +267,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory8.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory8.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Office supplies
@@ -275,7 +277,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory11.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory11.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Household electronic appliances
@@ -285,7 +287,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <a href="#"><img src="image/trendingCategory12.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="/image/trendingCategory12.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Medical and healthcare equipment
@@ -330,7 +332,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <img src="image/flashsale1.jpg" class="card-img-top" alt="...">
+                      <img src="/image/flashsale1.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">
                           StorageWorks Large Storage Baskets for Organizing</h5>
@@ -340,7 +342,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale2.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Bedsure Fleece Blanket Twin Blanket</h5>
@@ -350,7 +352,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale3.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Zulay Measuring Spoons Set - 6 Piece </h5>
@@ -360,7 +362,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale4.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Coffee Pod Holder, Large Capacity K Cup</h5>
@@ -370,7 +372,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale9.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale9.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         Nulksen Tire Inflator Portable Air</h5>
@@ -380,7 +382,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale10.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale10.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         iRobot Roomba j7+</h5>
@@ -394,7 +396,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <!-- <div class="col-lg-2 col-md-4">
                     <div class="card">
-                      <img src="image/flashsale5.jpg" class="card-img-top" alt="...">
+                      <img src="/image/flashsale5.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">
                           Pipishell Bamboo Expandable Drawer Organizer </h5>
@@ -405,7 +407,7 @@
                   </div> -->
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale6.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">
                         ComfiLife Anti Fatigue Floor Mat – 3/4 Inch</h5>
@@ -415,7 +417,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale7.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale7.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Bloomingville Handwoven 28" Round Rattan</h5>
                       <p class="card-text">Price: $19.99</p>
@@ -424,7 +426,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale8.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale8.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Zulay Kitchen 6 Piece Wooden Spoons for Cooking</h5>
                       <p class="card-text">Price: $25.49</p>
@@ -433,7 +435,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4">
                   <div class="card">
-                    <img src="image/flashsale11.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale11.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Ekouaer Women's Swimsuit Beach</h5>
                       <p class="card-text">Price: $24.49</p>
@@ -442,7 +444,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4 ">
                   <div class="card">
-                    <img src="image/flashsale12.jpg" class="card-img-top" alt="...">
+                    <img src="/image/flashsale12.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Bedsure Fleece Blankets Twin</h5>
                       <p class="card-text">Price: $15.99</p>
@@ -476,37 +478,37 @@
     <div class="simple-mall">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall1.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall1.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo1.jpg" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo1.jpg" alt="Brand Logo 1">
           <h5 class="brand-name">ASUS </h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall2.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall2.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo2.png" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo2.png" alt="Brand Logo 1">
           <h5 class="brand-name">Adidas</h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall3.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall3.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo3.png" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo3.png" alt="Brand Logo 1">
           <h5 class="brand-name">Maybelline</h5>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="product-img-container">
-          <img class="product-img" src="image/mall4.jpg" alt="Product 1">
+          <img class="product-img" src="/image/mall4.jpg" alt="Product 1">
         </div>
         <div class="shop">
-          <img class="brand-logo" src="image/logo4.jpg" alt="Brand Logo 1">
+          <img class="brand-logo" src="/image/logo4.jpg" alt="Brand Logo 1">
           <h5 class="brand-name">Nestle</h5>
         </div>
       </div>
@@ -520,7 +522,7 @@
     <div class="daily">
       <h2 class=" mb-2">Daily Discover</h2>
     </div>
-    <div class="daily-discover row" >
+    <div class="daily-discover row">
       {{#each products}}
       <div class="col-lg-2 mt-4">
         <div class="card">
